--- a/public/home.html
+++ b/public/home.html
@@ -32,6 +32,9 @@
             color:#fff;
         }
         
+        .content1{
+                margin-top:100px;
+        }
     </style>
 
     <title>Hello world</title>
@@ -42,6 +45,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
 <body>
+    <div class="content1">
 <div class="container-lg">
 <div class="d-flex justify-content-center h-100">
     <div class="user_card">
@@ -80,7 +84,8 @@
     </div>
 </div>
 </div>
-
+</div>
+</body>
 
 
 
